--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cross-env": "^5.0.5",
     "css-hot-loader": "^1.3.2",
     "css-loader": "^0.28.7",
+    "echarts": "^3.8.5",
     "eslint": "^4.7.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^2.1.0",
