--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "cross-env NODE_ENV=development webpack --config build/ --colors --watch",
     "prebuild": "rm -rf ./www",
     "build": "cross-env NODE_ENV=production webpack -p --config build/ --progress --colors",
-    "dev": "cross-env NODE_ENV=development node build/server --4010",
+    "dev": "cross-env NODE_ENV=development node build/server",
     "pack": "node build/pack",
     "clean": "node build/clean",
     "test": "node build/publicServer"
